force-app/main/default/objects/Einstein_Settings__c/Einstein_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Einstein Settings</label>
</CustomObject>