force-app/main/default/objects/Einstein_Settings__c/fields/certificate_part_3__c.field-meta.xml
<CustomField>
    <fullName>certificate_part_3__c</fullName>
    <label>certificate part 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>