force-app/main/default/objects/Einstein_Settings__c/fields/FeatureCode__c.field-meta.xml
<CustomField>
    <fullName>FeatureCode__c</fullName>
    <inlineHelpText>Only enter values in this field if instructed to do so by Salesforce</inlineHelpText>
    <label>FeatureCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>