force-app/main/default/objects/Einstein_Settings__c/fields/NER_Enabled__c.field-meta.xml
<CustomField>
    <fullName>NER_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field will enable the NER tab of the Playground</description>
    <label>NER Enabled</label>
    <type>Checkbox</type>
</CustomField>