force-app/main/default/objects/Einstein_Settings__c/fields/OCR_Enabled__c.field-meta.xml
<CustomField>
    <fullName>OCR_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field will enable the OCR tab of the Playground</description>
    <label>OCR Enabled</label>
    <type>Checkbox</type>
</CustomField>