force-app/main/default/objects/Einstein_Settings__c/fields/Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key__c</fullName>
    <label>Secret Key</label>
    <type>TextArea</type>
</CustomField>